Revert "squishy fix"
This reverts commit 765d77ee0e0d0f82ed0d18a34cbdfaad43395064.

--- a/parlassets/scss/_list_generator.scss
+++ b/parlassets/scss/_list_generator.scss
@@ -121,7 +121,7 @@
     }
   }
 
-  // @include respond-to(limbo) {
+  @include respond-to(limbo) {
     .analyses {
       flex-wrap: wrap;
       margin-bottom: 11px;
@@ -133,7 +133,7 @@
         &:nth-child(5) { margin-right: 0; }
       }
     }
-  // }
+  }
 }
 
 .session-list-generator {
